--- a/gym-typescript-app/package.json
+++ b/gym-typescript-app/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.18",
+    "@types/node": "^20.8.9",
     "@types/react-anchor-link-smooth-scroll": "^1.0.2",
     "framer-motion": "^10.16.4",
     "react": "^18.2.0",
