--- a/gym-typescript-app/package.json
+++ b/gym-typescript-app/package.json
@@ -14,6 +14,7 @@
     "@types/node": "^20.8.9",
     "@types/react-anchor-link-smooth-scroll": "^1.0.2",
     "framer-motion": "^10.16.4",
+    "latest-version": "^7.0.0",
     "react": "^18.2.0",
     "react-anchor-link-smooth-scroll": "^1.0.12",
     "react-dom": "^18.2.0",
