--- a/gym-typescript-app/package.json
+++ b/gym-typescript-app/package.json
@@ -40,6 +40,6 @@
   "description": "This template provides a minimal setup to get React working in Vite with HMR and some ESLint rules.",
   "main": "postcss.config.js",
   "keywords": [],
-  "author": "",
+  "author": "Khamisi Lawrence",
   "license": "ISC"
 }
