updated tsconfig.json file

--- a/gym-typescript-app/tsconfig.json
+++ b/gym-typescript-app/tsconfig.json
@@ -13,7 +13,7 @@
       "DOM",
       "DOM.Iterable"
     ],
-    "module": "ESNext",
+    "module": "Node16",
     "skipLibCheck": true,
     /* Bundler mode */
     "moduleResolution": "Node16",
